--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Hi, my name is M. T. H. Titumir.</h1>
     <h2>I am a junior web developer. I will damage your website. ha ha ha</h2>
     <p>Please don't hire me! I will make a massacure in your website.</p>
+    <h1>mama i can  code now.</h1>
+    <h2>I can create wow websites.</h2>
 </body>
 </html>
